--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,7 +45,13 @@ doctrine:
         dbname: '%database_name%'
         user: '%database_user%'
         password: '%database_password%'
-        charset: UTF8
+        charset: UTF8MB4
+        default_table_options:
+            charset: utf8mb4
+            collation: utf8mb4_lithuanian_ci
+        options:
+            1002: "SET NAMES 'UTF8MB4' COLLATE 'utf8mb4_lithuanian_ci'"
+
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: '%kernel.project_dir%/var/data/data.sqlite'
