--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,10 +44,10 @@ doctrine:
         dbname: '%database_name%'
         user: '%database_user%'
         password: '%database_password%'
-        charset: UTF8MB4
+        charset: UTF8
         default_table_options:
-            charset: utf8mb4
-            collation: utf8mb4_lithuanian_ci
+            charset: utf8
+            collation: utf8_lithuanian_ci
         options:
             1002: "SET NAMES 'UTF8MB4' COLLATE 'utf8mb4_lithuanian_ci'"
 
