--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,3 +22,9 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+    encoders:
+        AppBundle\Entity\User: bcrypt
+
+        Symfony\Component\Security\Core\User\User:
+            algorithm: bcrypt
+            cost: 12
