--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,8 +1,5 @@
-# To get started with security, check out the documentation:
-# https://symfony.com/doc/current/security.html
 security:
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         our_db_provider:
             entity:
@@ -11,7 +8,6 @@ security:
 #            memory: ~
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -21,16 +17,15 @@ security:
             form_login:
                 login_path: login
                 check_path: login
-            # activate different ways to authenticate
 
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
+            logout:
+                path: /logout
+                target: /shop
 
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+    access_control:
+        - { path: ^/confOrder, roles:ROLE_USER }
+
     encoders:
         AppBundle\Entity\User: bcrypt
 
-#        Symfony\Component\Security\Core\User\User:
-#            algorithm: bcrypt
-#            cost: 12
+
