Idetas css, pakeistas home url

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,7 +20,7 @@ security:
 
             logout:
                 path: /logout
-                target: /shop
+                target: /
 
     access_control:
         - { path: ^/confOrder, roles:ROLE_USER }
